--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,23 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.ads": "4.3.0",
+    "com.unity.ai.navigation": "1.1.0-pre.1",
+    "com.unity.analytics": "3.8.1",
+    "com.unity.collab-proxy": "1.17.2",
     "com.unity.ide.rider": "3.0.17",
+    "com.unity.ide.visualstudio": "2.0.16",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.purchasing": "4.4.1",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.7.1",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.8",
+    "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.xr.management": "4.2.1",
     "com.unity.xr.openxr": "1.5.3",
-    "com.valvesoftware.unity.openvr": "file:../Assets/SteamVR/OpenVRUnityXRPackage/Editor/com.valvesoftware.unity.openvr-1.1.4.tgz",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
