--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,11 +2,14 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.ads": "4.3.0",
     "com.unity.ai.navigation": "1.1.0-pre.1",
+    "com.unity.analytics": "3.8.1",
     "com.unity.collab-proxy": "1.17.2",
     "com.unity.ide.rider": "3.0.17",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.purchasing": "4.4.1",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.1",
