--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,5 @@
 {
   "dependencies": {
-    "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.tilemap": "1.0.0",
     "com.unity.collab-proxy": "1.17.2",
     "com.unity.ide.rider": "3.0.17",
     "com.unity.ide.visualstudio": "2.0.16",
@@ -13,6 +11,7 @@
     "com.unity.visualscripting": "1.7.8",
     "com.unity.xr.management": "4.2.1",
     "com.unity.xr.openxr": "1.5.3",
+    "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
