ShaderHandler updated to allow multipass rendering and stereoscopic effects

--- a/Runtime/com.simpleomnia.simplexr.Runtime.asmdef
+++ b/Runtime/com.simpleomnia.simplexr.Runtime.asmdef
@@ -3,8 +3,9 @@
   "references": ["Unity.XR.Management",
     "Unity.InputSystem",
     "Unity.TextMeshPro",
-    "\"Unity.VisualScripting",
-    "Unity.VisualScripting.Core"],
+    "Unity.VisualScripting",
+    "Unity.VisualScripting.Core"
+    ],
   "includePlatforms": [],
   "excludePlatforms": [],
   "allowUnsafeCode": false,
