--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "com.unity.inputsystem": "1.4.4",
     "com.unity.xr.management": "4.2.1",
-    "com.unity.textmeshpro": "3.0.6"
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.xr.core-utils": "2.1.0"
   },
   "samples": [
     {
