--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "documentationUrl": "https://github.com/unity-sXR/sXR/blob/master/README.md",
   "changelogUrl": "https://github.com/unity-sXR/sXR/blob/master/CHANGELOG.md",
   "licensesUrl": "https://github.com/unity-sXR/sXR/blob/master/LICENSE.md",
-  "dependencies": {
-    "com.unity.inputsystem": "1.4.4",
-    "com.unity.xr.management": "4.2.1",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.xr.core-utils": "2.1.0"
-    "com.unity.visualscripting": "1.7.8"
-  },
+ "dependencies": {
+  "com.unity.inputsystem": "1.4.4",
+  "com.unity.xr.management": "4.2.1",
+  "com.unity.textmeshpro": "3.0.6",
+  "com.unity.xr.core-utils": "2.1.0",
+  "com.unity.visualscripting": "1.7.8"
+},
   "samples": [
     {
       "displayName": "Sample Experiment",
