Added PlayerPrefsWrapper and updated assembly file

--- a/Runtime/com.simpleomnia.simplexr.Runtime.asmdef
+++ b/Runtime/com.simpleomnia.simplexr.Runtime.asmdef
@@ -4,7 +4,11 @@
     "Unity.InputSystem",
     "Unity.TextMeshPro",
     "Unity.VisualScripting",
-    "Unity.VisualScripting.Core"
+    "Unity.VisualScripting.Core", 
+    "ViveSR",
+    "SteamVR",
+    "SteamVR_Actions",
+    "Unity.XR.OpenVR"
     ],
   "includePlatforms": [],
   "excludePlatforms": [],
