--- a/Runtime/com.simpleomnia.simplexr.Runtime.asmdef
+++ b/Runtime/com.simpleomnia.simplexr.Runtime.asmdef
@@ -9,7 +9,8 @@
         "ViveSR",
         "Unity.XR.OpenVR",
         "Unity.XR.Interaction.Toolkit",
-        "Unity.XR.CoreUtils"
+        "Unity.XR.CoreUtils",
+        "Unity.Mathematics"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
